--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ^3.5.3
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,6 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # Firebase Core
+  firebase_core: ^2.27.2
+  firebase_auth: ^4.18.0
+  cloud_firestore: ^4.15.10
+  # firebase_storage: ^11.6.11 # Dinonaktifkan sementara
+
+  # State Management (opsional tapi sangat direkomendasikan)
+  provider: ^6.1.2
+
+  # Fungsionalitas
+  # image_picker: ^1.0.8 # Dinonaktifkan sementara
+  url_launcher: ^6.2.6
+  intl: ^0.19.0 # Untuk format tanggal
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
