--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cmake.sourceDirectory": "/home/risandi/surat_mobile_sukorame/linux",
-    "editor.linkedEditing": true
+    "editor.linkedEditing": true,
+    "cmake.ignoreCMakeListsMissing": true
 }
