--- a/android/.gitignore
+++ b/android/.gitignore
@@ -6,6 +6,10 @@ gradle-wrapper.jar
 /local.properties
 GeneratedPluginRegistrant.java
 .cxx/
+/build/
+**/build/
+**/reports/
+**/problems/
 
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/to/reference-keystore
