--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   # Navigation & Links
   app_links: ^3.4.1
   url_launcher: ^6.2.6
+  webview_flutter: ^4.4.4
 
   # Other
   rxdart: ^0.28.0
@@ -64,6 +65,7 @@ dependencies:
   path: ^1.9.0
   cryptography: ^2.1.0
   flutter_secure_storage: ^8.0.0
+  flutter_secure_storage_web: ^1.2.1
   timeago: ^3.6.1
   pdf: ^3.10.8
   printing: ^5.12.0
